--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
   now, TimeTrove keeps your memories safe and ready to be rediscovered.
 </p>
 <a
-  href="#"
+  href="/create"
   class="px-6 py-3 rounded-lg bg-[#ffd036] text-gray-900 font-extrabold shadow hover:bg-[#8c762d] transition"
   >Start Preserving</a
 >
